# blinksy-quickstart-3d-grid

./: Cargo.toml  README.md  justfile
.cargo/: config.toml
src/: layout.rs  main.rs
src/patterns/: rainbow.rs
