[package]
name = "blinksy-quickstart-3d-rope"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
blinksy = "0.8"
blinksy-desktop = { version = "0.8", optional = true }
cfg-iif = "0.2"
esp-hal = { version = "1.0.0-rc.0", optional = true }
gledopto = { version = "0.8", features = ["gl_c_016wl_d"], optional = true }

[features]
default = ["desktop"]
mcu = ["dep:esp-hal", "dep:gledopto"]
desktop = ["dep:blinksy-desktop"]
